--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
     <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
       <div class="bg-white p-6 rounded-xl shadow text-center">
         <h4 class="font-semibold mb-2">Email & Customer Support</h4>
-        <p>Automatically respond to customer inquiries, route urgent requests, and never miss an important email.</p>
+        <p>Automatically respond to customers, route support requests, and never miss an urgent message.</p>
       </div>
       <div class="bg-white p-6 rounded-xl shadow text-center">
         <h4 class="font-semibold mb-2">CRM & Sales Workflows</h4>
-        <p>Connect leads from your website, email, or ads directly into your CRM and follow up automatically.</p>
+        <p>Connect leads from email, website, or ads straight into your CRM and follow up automatically.</p>
       </div>
       <div class="bg-white p-6 rounded-xl shadow text-center">
         <h4 class="font-semibold mb-2">Data & Reporting</h4>
-        <p>Generate real-time dashboards and reports to make decisions with zero manual work.</p>
+        <p>Generate real-time dashboards and reports so you can make decisions with zero manual work.</p>
       </div>
       <div class="bg-white p-6 rounded-xl shadow text-center">
         <h4 class="font-semibold mb-2">Custom Integrations</h4>
@@ -91,13 +91,35 @@
     <div class="max-w-xl mx-auto text-center">
       <h3 class="text-2xl font-bold mb-6">Get in Touch</h3>
       <p class="mb-6">Tell us about your business needs. We'll get back to you within 24 hours.</p>
-      <form class="space-y-4 text-left">
-        <input type="text" placeholder="Name" class="w-full p-3 rounded-lg text-gray-800" required>
-        <input type="email" placeholder="Email" class="w-full p-3 rounded-lg text-gray-800" required>
-        <textarea placeholder="Your Needs" rows="4" class="w-full p-3 rounded-lg text-gray-800" required></textarea>
+      <form id="contactForm" class="space-y-4 text-left">
+        <input type="text" name="name" placeholder="Name" class="w-full p-3 rounded-lg text-gray-800" required>
+        <input type="email" name="email" placeholder="Email" class="w-full p-3 rounded-lg text-gray-800" required>
+        <textarea name="message" placeholder="Your Needs" rows="4" class="w-full p-3 rounded-lg text-gray-800" required></textarea>
         <button type="submit" class="bg-white text-indigo-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100">Send Message</button>
       </form>
     </div>
+    <script>
+      document.getElementById('contactForm').addEventListener('submit', async function(e) {
+        e.preventDefault();
+        const form = e.target;
+        const data = {
+          name: form.name.value,
+          email: form.email.value,
+          message: form.message.value
+        };
+        const response = await fetch('https://jeseraimonpatron.app.n8n.cloud/webhook/4acd186e-c72b-4375-9859-d8f999f40a55', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(data)
+        });
+        if(response.ok){
+          alert('Message sent! We will contact you shortly.');
+          form.reset();
+        } else {
+          alert('Something went wrong. Please try again.');
+        }
+      });
+    </script>
   </section>
 
   <!-- Footer -->
