--- a/index.html
+++ b/index.html
@@ -1,87 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Genaixa - Business Automation Services</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Genaixa Automation Services</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-50 text-gray-800 font-sans">
+<body class="bg-gray-50 text-gray-800">
 
   <!-- Header -->
-  <header class="bg-white shadow sticky top-0 z-50">
-    <div class="max-w-6xl mx-auto flex justify-between items-center p-4">
-      <h1 class="text-2xl font-bold text-indigo-600">Genaixa</h1>
-      <nav class="space-x-6">
-        <a href="#services" class="hover:text-indigo-600">Services</a>
-        <a href="#pricing" class="hover:text-indigo-600">Pricing</a>
-        <a href="#contact" class="hover:text-indigo-600">Contact</a>
+  <header class="bg-indigo-600 text-white py-6 px-6">
+    <div class="max-w-4xl mx-auto flex justify-between items-center">
+      <h1 class="text-3xl font-bold">Genaixa Automation</h1>
+      <nav class="space-x-4">
+        <a href="#services" class="hover:underline">Services</a>
+        <a href="#contact" class="hover:underline">Contact</a>
       </nav>
     </div>
   </header>
 
   <!-- Hero Section -->
-  <section class="text-center py-20 bg-gradient-to-r from-indigo-600 to-purple-600 text-white">
-    <h2 class="text-4xl font-bold mb-4">Automate Your Business. Free Your Time.</h2>
-    <p class="text-lg mb-6">We build smart automations that replace repetitive tasks, cut costs, and keep your business running 24/7 — without hiring more staff.</p>
-    <a href="#contact" class="bg-white text-indigo-600 font-semibold px-6 py-3 rounded-lg shadow hover:bg-gray-100">Get a Free Automation Audit</a>
+  <section class="text-center py-20 px-6 bg-indigo-500 text-white">
+    <h2 class="text-4xl font-bold mb-4">Automate Your Business Workflows</h2>
+    <p class="mb-6 text-lg">Save time, reduce errors, and scale faster with intelligent automation.</p>
+    <a href="#contact" class="bg-white text-indigo-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100">Get Started</a>
   </section>
 
-  <!-- Services -->
-  <section id="services" class="max-w-6xl mx-auto py-16 px-6">
-    <h3 class="text-2xl font-bold text-center mb-10">What We Do</h3>
-    <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
-      <div class="bg-white p-6 rounded-xl shadow text-center">
-        <h4 class="font-semibold mb-2">Email & Customer Support</h4>
-        <p>Automatically respond to customers, route support requests, and never miss an urgent message.</p>
+  <!-- Services Section -->
+  <section id="services" class="max-w-4xl mx-auto py-16 px-6">
+    <h3 class="text-2xl font-bold mb-8 text-center">Our Services</h3>
+    <div class="grid md:grid-cols-3 gap-6">
+      <div class="bg-white shadow-md rounded-lg p-6 text-center">
+        <h4 class="font-semibold mb-2">Email Automation</h4>
+        <p>Respond to customers automatically, generate quotes, and manage inquiries seamlessly.</p>
       </div>
-      <div class="bg-white p-6 rounded-xl shadow text-center">
-        <h4 class="font-semibold mb-2">CRM & Sales Workflows</h4>
-        <p>Connect leads from email, website, or ads straight into your CRM and follow up automatically.</p>
+      <div class="bg-white shadow-md rounded-lg p-6 text-center">
+        <h4 class="font-semibold mb-2">Job Scheduling</h4>
+        <p>Automatically assign tasks to employees and sync calendars without lifting a finger.</p>
       </div>
-      <div class="bg-white p-6 rounded-xl shadow text-center">
-        <h4 class="font-semibold mb-2">Data & Reporting</h4>
-        <p>Generate real-time dashboards and reports so you can make decisions with zero manual work.</p>
-      </div>
-      <div class="bg-white p-6 rounded-xl shadow text-center">
-        <h4 class="font-semibold mb-2">Custom Integrations</h4>
-        <p>We link the tools you already use (Google, Slack, WhatsApp, Airtable, Shopify, HubSpot) into one seamless system.</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- Why Choose Us -->
-  <section class="bg-gray-100 py-16 px-6 text-center">
-    <h3 class="text-2xl font-bold mb-6">Why Choose Genaixa?</h3>
-    <div class="max-w-3xl mx-auto space-y-4 text-lg text-gray-700">
-      <p>✅ Save 10+ hours/week per employee</p>
-      <p>✅ No-code experts — fast & affordable</p>
-      <p>✅ Trusted automations that never break</p>
-      <p>✅ Scalable: from small businesses to enterprises</p>
-    </div>
-  </section>
-
-  <!-- Pricing -->
-  <section id="pricing" class="max-w-6xl mx-auto py-16 px-6">
-    <h3 class="text-2xl font-bold text-center mb-10">Pricing</h3>
-    <div class="grid md:grid-cols-3 gap-8">
-      <div class="bg-white rounded-xl shadow p-6 text-center">
-        <h4 class="font-bold text-lg mb-2">Starter</h4>
-        <p class="text-gray-500 mb-4">Basic automations for small teams (Up to 3 workflows)</p>
-        <p class="text-3xl font-bold mb-4">$499/mo</p>
-        <a href="#contact" class="bg-indigo-600 text-white px-6 py-2 rounded-lg hover:bg-indigo-700">Get Started</a>
-      </div>
-      <div class="bg-white rounded-xl shadow p-6 text-center border-2 border-indigo-600">
-        <h4 class="font-bold text-lg mb-2">Pro</h4>
-        <p class="text-gray-500 mb-4">Advanced workflows, CRM, and reporting (Up to 10 workflows)</p>
-        <p class="text-3xl font-bold mb-4">$999/mo</p>
-        <a href="#contact" class="bg-indigo-600 text-white px-6 py-2 rounded-lg hover:bg-indigo-700">Get Started</a>
-      </div>
-      <div class="bg-white rounded-xl shadow p-6 text-center">
-        <h4 class="font-bold text-lg mb-2">Enterprise</h4>
-        <p class="text-gray-500 mb-4">Full-stack automation, unlimited workflows, dedicated support</p>
-        <p class="text-3xl font-bold mb-4">Custom Pricing</p>
-        <a href="#contact" class="bg-indigo-600 text-white px-6 py-2 rounded-lg hover:bg-indigo-700">Get Started</a>
+      <div class="bg-white shadow-md rounded-lg p-6 text-center">
+        <h4 class="font-semibold mb-2">Notifications</h4>
+        <p>Send SMS or WhatsApp alerts for emergencies or critical updates to your team instantly.</p>
       </div>
     </div>
   </section>
@@ -107,24 +66,29 @@
           email: form.email.value,
           message: form.message.value
         };
-        const response = await fetch('https://jeseraimonpatron.app.n8n.cloud/webhook/7832df29-cd7a-486e-9497-ab40f1bcc907', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
-        });
-        if(response.ok){
-          alert('Message sent! We will contact you shortly.');
-          form.reset();
-        } else {
-          alert('Something went wrong. Please try again.');
+        try {
+          const response = await fetch('https://jeseraimonpatron.app.n8n.cloud/webhook-test/7832df29-cd7a-486e-9497-ab40f1bcc907', {
+            method: 'POST',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify(data)
+          });
+          if(response.ok){
+            alert('Message sent! We will contact you shortly.');
+            form.reset();
+          } else {
+            alert('Something went wrong. Please try again.');
+          }
+        } catch (err) {
+          alert('Error sending message. Check your internet connection.');
+          console.error(err);
         }
       });
     </script>
   </section>
 
   <!-- Footer -->
-  <footer class="text-center py-6 text-sm text-gray-500">
-    © 2025 Genaixa. Built with n8n & ❤️.
+  <footer class="bg-gray-800 text-white py-6 px-6 text-center">
+    &copy; 2025 Genaixa Automation Services. All rights reserved.
   </footer>
 
 </body>
