--- a/index.html
+++ b/index.html
@@ -54,33 +54,53 @@
         <input type="text" name="name" placeholder="Name" class="w-full p-3 rounded-lg text-gray-800" required>
         <input type="email" name="email" placeholder="Email" class="w-full p-3 rounded-lg text-gray-800" required>
         <textarea name="message" placeholder="Your Needs" rows="4" class="w-full p-3 rounded-lg text-gray-800" required></textarea>
-        <button type="submit" class="bg-white text-indigo-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100">Send Message</button>
+        <button type="submit" id="submitButton" class="bg-white text-indigo-600 px-6 py-3 rounded-lg font-semibold hover:bg-gray-100">
+          Send Message
+        </button>
       </form>
+      <div id="formStatus" class="mt-4 text-lg font-semibold"></div>
     </div>
+
     <script>
-      document.getElementById('contactForm').addEventListener('submit', async function(e) {
+      const form = document.getElementById('contactForm');
+      const button = document.getElementById('submitButton');
+      const status = document.getElementById('formStatus');
+
+      form.addEventListener('submit', async function(e) {
         e.preventDefault();
-        const form = e.target;
         const data = {
           name: form.name.value,
           email: form.email.value,
           message: form.message.value
         };
+
+        // Disable button and show sending
+        button.disabled = true;
+        button.textContent = "Sending...";
+        status.textContent = "";
+
         try {
           const response = await fetch('https://jeseraimonpatron.app.n8n.cloud/webhook-test/7832df29-cd7a-486e-9497-ab40f1bcc907', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify(data)
           });
+
           if(response.ok){
-            alert('Message sent! We will contact you shortly.');
+            status.textContent = "✅ Message sent! We will contact you shortly.";
+            status.className = "mt-4 text-lg font-semibold text-green-300";
             form.reset();
           } else {
-            alert('Something went wrong. Please try again.');
+            status.textContent = "❌ Something went wrong. Please try again.";
+            status.className = "mt-4 text-lg font-semibold text-red-300";
           }
         } catch (err) {
-          alert('Error sending message. Check your internet connection.');
+          status.textContent = "❌ Error sending message. Check your internet connection.";
+          status.className = "mt-4 text-lg font-semibold text-red-300";
           console.error(err);
+        } finally {
+          button.disabled = false;
+          button.textContent = "Send Message";
         }
       });
     </script>
